# stackly

./: .gitattributes  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  ROADMAP.md
.planning/codebase/: phase-1-tech.md
.planning/phase-2.5-crash-auto-detection/: CONTEXT.md  PLAN.md  RESEARCH.md
.planning/phase-2a-fix-loop-mvp/: GOAL.md  PLAN.md  PLAN_CHECK.md  RESEARCH.md
.planning/phase-2b-public-launch/: DEMO_SCRIPT.md  LAUNCH_READINESS.md
scripts/: e2e_fix_smoke.py  e2e_smoke.py  install-debugging-tools.ps1
site/: index.html  package-lock.json  package.json  shot.mjs  vite.config.js
site/src/: App.jsx  main.jsx  styles.css
site/src/hooks/: useForensic.js
site/src/sections/: Closer.jsx  CropMarks.jsx  Footer.jsx  Hero.jsx  Integrations.jsx  Masthead.jsx  Narrative.jsx  PageGutter.jsx  Tools.jsx
src/debugbridge/: __init__.py  cli.py  session.py  tools.py
src/debugbridge/fix/: __init__.py  briefing.py  claude_runner.py  dispatcher.py  mcp_client.py  models.py  patch_writer.py  worktree.py
src/stackly/: __init__.py  __main__.py  cli.py  env.py  models.py  server.py  session.py  tools.py
src/stackly/fix/: __init__.py  briefing.py  build_runner.py  claude_runner.py  dispatcher.py  mcp_client.py  models.py  patch_writer.py  worktree.py
src/stackly/watch/: __init__.py  dispatcher.py
tests/: conftest.py  test_doctor_unchanged.py  test_env.py  test_fix_briefing.py  test_fix_build_runner.py  test_fix_claude_runner.py  test_fix_cli.py  test_fix_dispatcher.py  test_fix_e2e.py  test_fix_mcp_client.py  test_fix_models.py  test_fix_patch_writer.py  test_fix_worktree.py  test_import_constraints.py  test_models.py  test_parsers.py  test_session_integration.py  test_version.py  test_watch_cli.py  test_watch_derisk_async_offload.py  test_watch_derisk_nonexception_break.py  test_watch_derisk_reattach.py  test_watch_derisk_timeout_units.py  test_watch_dispatcher.py  test_watch_e2e.py  test_watch_models.py  test_watch_session.py  test_watch_tools.py
tests/fixtures/crash_app/: crash.cpp
